[gd_scene load_steps=8 format=2]

[ext_resource path="res://Fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/bg.jpg" type="Texture" id=2]
[ext_resource path="res://UI/Win.gd" type="Script" id=3]
[ext_resource path="res://themes/SelectedPrimaryButton.tres" type="StyleBox" id=4]
[ext_resource path="res://themes/UnSelectedPrimaryButton.tres" type="StyleBox" id=5]
[ext_resource path="res://assets/Anville Town.mp3" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="Win" type="Node2D"]
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 320.0
margin_bottom = 184.0
texture = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="."]
margin_right = 320.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0.996078, 0.996078, 0.996078, 1 )
custom_fonts/font = SubResource( 1 )
text = "You Win!"
align = 1
valign = 1
autowrap = true

[node name="VBoxContainer" type="HBoxContainer" parent="."]
margin_left = 77.0
margin_top = 91.0
margin_right = 256.0
margin_bottom = 113.0
grow_horizontal = 2
alignment = 1

[node name="HomeButton" type="Button" parent="VBoxContainer"]
margin_right = 41.0
margin_bottom = 22.0
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
text = "Home"

[node name="RetryButton" type="Button" parent="VBoxContainer"]
margin_left = 45.0
margin_right = 105.0
margin_bottom = 22.0
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
text = "Try Again"

[node name="NextLevelButton" type="Button" parent="VBoxContainer"]
margin_left = 109.0
margin_right = 179.0
margin_bottom = 22.0
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
text = "Next Level"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0
autoplay = true

[connection signal="pressed" from="VBoxContainer/HomeButton" to="." method="_on_HomeButton_pressed"]
[connection signal="pressed" from="VBoxContainer/RetryButton" to="." method="_on_RetryButton_pressed"]
[connection signal="pressed" from="VBoxContainer/NextLevelButton" to="." method="_on_NextLevelButton_pressed"]
